--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,4 +1,4 @@
 .bg-img {
-  background: linear-gradient(#1f13db00, #1f13db00), url(https://images.unsplash.com/photo-1515266591878-f93e32bc5937?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjM3MDM4fQ) no-repeat 50%;
+  background: linear-gradient(#1f13db00, #1f13db00), url(/img/mountains-bg.jpeg) no-repeat 50%;
   background-size: cover;
 }
