--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -2,3 +2,32 @@
   background: linear-gradient(#1f13db00, #1f13db00), url(/img/mountains-bg.jpeg) no-repeat 50%;
   background-size: cover;
 }
+
+.card {
+  width: 512px;
+  height: 512px;
+  perspective: 1000px;
+}
+
+.card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
