--- a/components/FlipCard/styles.module.scss
+++ b/components/FlipCard/styles.module.scss
@@ -1,13 +1,8 @@
-.bg-img {
-  background: linear-gradient(#1f13db00, #1f13db00), url(/img/mountains-bg.jpeg) no-repeat 50%;
-  background-size: cover;
-}
-
 .card {
   perspective: 1000px;
 }
 
-.card-inner {
+.cardInner {
   width: 100%;
   height: 100%;
   position: relative;
@@ -15,17 +10,17 @@
   transition: transform 0.6s;
 }
 
-.card:hover .card-inner {
+.card:hover .cardInner {
   transform: rotateY(180deg);
 }
 
-.card-front, .card-back {
+.cardFront, .cardBack {
   width: 100%;
   height: 100%;
   position: absolute;
   backface-visibility: hidden;
 }
 
-.card-back {
+.cardBack {
   transform: rotateY(180deg);
 }
