--- a/components/BusinessCard/styles.module.scss
+++ b/components/BusinessCard/styles.module.scss
@@ -1,17 +1,15 @@
 .card {
-  background-color: black;
   padding: 4rem 2rem;
   border-radius: 1rem;
   box-shadow: 0 5px 10px rgba(0, 0, 0, .5);
 
   text-align: center;
-  color: white;
   font-weight: 400;
 
   .actions {
     a {
       padding: 1em 3em;
-      border: 1px solid white;
+      border: 1px solid;
       border-radius: 0.5rem;
       transition: all .25s;
     }
