--- a/src/components/FlipCard/styles.module.css
+++ b/src/components/FlipCard/styles.module.css
@@ -10,11 +10,8 @@
   transition: transform 0.6s;
 }
 
-.card:hover .cardInner {
-  transform: rotateY(180deg);
-}
-
-.cardFront, .cardBack {
+.cardFront,
+.cardBack {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -22,5 +19,9 @@
 }
 
 .cardBack {
+  transform: rotateY(180deg);
+}
+
+.card:hover .cardInner {
   transform: rotateY(180deg);
 }
