--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import { faQuestion } from "@fortawesome/free-solid-svg-icons";
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
-import BusinessCard from "../components/BusinessCard";
-import FlipCard from "../components/FlipCard";
+import BusinessCard from "../components/BusinessCard.astro";
+import FlipCard from "../components/FlipCard.astro";
 import MediumFeed from "../components/MediumFeed";
 import Layout from "../layouts/Layout.astro";
 ---
@@ -21,17 +21,15 @@ import Layout from "../layouts/Layout.astro";
           Who.is <FontAwesomeIcon icon={faQuestion} shake={true} />
         </h1>
         <h2 class="text-3xl mb-8 text-neutral-300">Doruk Gezici</h2>
-        <p class="mb-4">
-          A curious hacker who is passionate about software, blockchain, innovation, entrepreneurship and leadership.
-        </p>
+        <p class="mb-4">A curious hacker who is passionate about software, automation and entrepreneurship.</p>
         <p class="mb-4">
           Experienced in product management, web development and architecture, DevOps, IoT and iOS apps. Interested in
           making everything more efficient, autonomous and smart.
         </p>
         <p class="mb-4">
-          Prefers tech stack choices like Python, Django, FastAPI, Go, Docker, AWS, PostgreSQL, Kubernetes, Rancher,
-          Celery, RabbitMQ, Redis, NextJS, React, VueJS, Tailwind, Bootstrap, Firebase, Sentry, GitHub Actions, Hotjar,
-          Cloudflare, Google Data Studio, Trello, Notion, Slack...
+          Prefers tech stack choices like Python, FastAPI, Django, Go, Docker, AWS, PostgreSQL, Kubernetes, Rancher,
+          Celery, RabbitMQ, Redis, NextJS, React, Svelte, Astro, Tailwind, Firebase, Sentry, GitHub Actions, Hotjar,
+          Cloudflare, Google Data Studio, Notion, Slack...
         </p>
         <p>
           <span> Also loves to play and record some jams and songs which you can check out at</span>
