Added projects section

--- a/src/components/BusinessCard.astro
+++ b/src/components/BusinessCard.astro
@@ -1,4 +1,5 @@
 ---
+import ContraBadge from "@/components/ContraBadge.astro";
 import {
   faFacebookF,
   faGithub,
@@ -11,7 +12,6 @@ import { faCalendar, faEnvelope } from "@fortawesome/free-solid-svg-icons";
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import classNames from "classnames";
 import { TypeAnimation } from "react-type-animation";
-import ContraBadge from "./ContraBadge.astro";
 
 interface Props {
   className?: string;
@@ -24,10 +24,10 @@ const { className } = Astro.props;
   <h1 class="font-extrabold text-6xl md:text-8xl text-neutral-200">Doruk Gezici</h1>
   <h2 class="my-5 sm:my-10 text-2xl md:text-4xl text-neutral-300">
     <TypeAnimation
-      sequence={["Backend & DevOps Engineer", 1000, "Tech Entrepreneur", 1000, "Full Stack Engineer", 1000]}
+      sequence={["Backend & DevOps Engineer", 1000, "Tech Entrepreneur", 1000, "Full Stack Developer", 1000]}
       wrapper="span"
       speed={50}
-      repeat={Infinity}
+      repeat={5}
       client:load
     />
   </h2>
