--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
   </head>
   <body class="text-neutral-400 bg-neutral-900">
     <slot />
-    <footer class="flex justify-center my-10">© 2023 | DGtech</footer>
+    <footer class="flex justify-center my-10">© 2023 | DGtech - Ali Doruk Gezici</footer>
 
     <!-- Google Tag Manager -->
     {process.env.NODE_ENV === "production" && (
