--- a/src/components/FlipCard.astro
+++ b/src/components/FlipCard.astro
@@ -11,12 +11,12 @@ const { className } = Astro.props;
 <div class={classNames(className, "card")}>
   <div class="cardInner">
     <div class="cardFront">
-      <img src="/img/dg.jpg" alt="Doruk Gezici" width={512} height={512} class="rounded-xl" />
+      <img src="/img/dg-pp.jpg" alt="Doruk Gezici" width={512} height={683} class="rounded-xl" />
     </div>
     <div class="cardBack">
       <iframe
         width="100%"
-        height="512"
+        height="683"
         allow="autoplay"
         src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/dorukgezici&color=%232a0c12&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
       ></iframe>
