--- a/src/components/BusinessCard.astro
+++ b/src/components/BusinessCard.astro
@@ -24,7 +24,16 @@ const { className } = Astro.props;
   <h1 class="font-extrabold text-6xl md:text-8xl text-neutral-200">Doruk Gezici</h1>
   <h2 class="my-5 sm:my-10 text-2xl md:text-4xl text-neutral-300">
     <TypeAnimation
-      sequence={["Backend & DevOps Engineer", 1000, "Tech Entrepreneur", 1000, "Full Stack Developer", 1000]}
+      sequence={[
+        "Backend & DevOps Engineer",
+        1000,
+        "Tech Entrepreneur",
+        1000,
+        "Full Stack Developer",
+        1000,
+        "Product Manager",
+        1000,
+      ]}
       wrapper="span"
       speed={50}
       repeat={5}
@@ -42,11 +51,11 @@ const { className } = Astro.props;
   <div class="actions flex flex-wrap justify-center items-center gap-5 my-5 sm:my-10 text-neutral-200">
     <a href="mailto:doruk@gezici.me" target="_blank">
       <FontAwesomeIcon icon={faEnvelope} className="mr-2" />
-       Contact Me
+      Contact Me
     </a>
     <a href="https://calendly.com/dorukgezici/30min" target="_blank">
       <FontAwesomeIcon icon={faCalendar} className="mr-2" />
-       Book Meeting
+      Book Meeting
     </a>
     <ContraBadge />
   </div>
