--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import "@fontsource/lato";
 import "@fortawesome/fontawesome-svg-core/styles.css";
 import "@/styles/global.css";
 
+import Analytics from "@vercel/analytics/astro";
+
 interface Props {
   title: string;
 }
@@ -23,6 +25,7 @@ const { title } = Astro.props;
     <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <Analytics/>
   </head>
   <body class="text-neutral-400 bg-neutral-900">
     <slot />
