Updated booking link in BusinessCard component

--- a/src/components/BusinessCard.astro
+++ b/src/components/BusinessCard.astro
@@ -53,7 +53,7 @@ const { className } = Astro.props;
       <FontAwesomeIcon icon={faEnvelope} className="mr-2" />
       Contact Me
     </a>
-    <a href="https://calendly.com/dorukgezici/30min" target="_blank">
+    <a href="https://cal.com/dorukgezici" target="_blank">
       <FontAwesomeIcon icon={faCalendar} className="mr-2" />
       Book Meeting
     </a>
