comment out blog section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import AboutSection from "@/components/AboutSection.astro";
-import BlogsSection from "@/components/BlogsSection.astro";
+// import BlogsSection from "@/components/BlogsSection.astro";
 import HeroSection from "@/components/HeroSection.astro";
 import ProjectsSection from "@/components/ProjectsSection";
 import Layout from "@/layouts/Layout.astro";
@@ -11,6 +11,6 @@ import Layout from "@/layouts/Layout.astro";
     <HeroSection />
     <AboutSection />
     <ProjectsSection client:load />
-    <BlogsSection />
+    <!-- <BlogsSection /> -->
   </main>
 </Layout>
