Updated dependencies & info

--- a/src/components/AboutSection.astro
+++ b/src/components/AboutSection.astro
@@ -1,7 +1,7 @@
 ---
-import FlipCard from "@/components/FlipCard.astro";
-import { faQuestion } from "@fortawesome/free-solid-svg-icons";
-import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
+import FlipCard from "@/components/FlipCard.astro"
+import { faQuestion } from "@fortawesome/free-solid-svg-icons"
+import { FontAwesomeIcon } from "@fortawesome/react-fontawesome"
 ---
 
 <section class="flex flex-wrap justify-center items-center gap-8">
