--- a/src/components/BlogsSection.astro
+++ b/src/components/BlogsSection.astro
@@ -1,5 +1,5 @@
 ---
-import MediumFeed from "@/components/MediumFeed";
+import MediumFeed from "@/components/MediumFeed"
 ---
 
 <section class="w-full text-center">
