--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,6 +1,6 @@
 ---
-import BusinessCard from "@/components/BusinessCard.astro";
-import { motion } from "framer-motion";
+import BusinessCard from "@/components/BusinessCard.astro"
+import { motion } from "framer-motion"
 ---
 
 <section class="bg-img min-h-screen max-h-screen flex justify-center items-center">
