--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import AboutSection from "@/components/AboutSection.astro";
+import AboutSection from "@/components/AboutSection.astro"
 // import BlogsSection from "@/components/BlogsSection.astro";
-import HeroSection from "@/components/HeroSection.astro";
-import ProjectsSection from "@/components/ProjectsSection";
-import Layout from "@/layouts/Layout.astro";
+import HeroSection from "@/components/HeroSection.astro"
+import ProjectsSection from "@/components/ProjectsSection"
+import Layout from "@/layouts/Layout.astro"
 ---
 
 <Layout title="Doruk Gezici | DGtech">
