--- a/src/components/BusinessCard.astro
+++ b/src/components/BusinessCard.astro
@@ -1,5 +1,5 @@
 ---
-import ContraBadge from "@/components/ContraBadge.astro";
+// import ContraBadge from "@/components/ContraBadge.astro"
 import {
   faFacebookF,
   faGithub,
@@ -7,33 +7,24 @@ import {
   faLinkedinIn,
   faMediumM,
   faTwitter,
-} from "@fortawesome/free-brands-svg-icons";
-import { faCalendar, faEnvelope } from "@fortawesome/free-solid-svg-icons";
-import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
-import classNames from "classnames";
-import { TypeAnimation } from "react-type-animation";
+} from "@fortawesome/free-brands-svg-icons"
+import { faCalendar, faEnvelope } from "@fortawesome/free-solid-svg-icons"
+import { FontAwesomeIcon } from "@fortawesome/react-fontawesome"
+import classNames from "classnames"
+import { TypeAnimation } from "react-type-animation"
 
 interface Props {
-  className?: string;
+  className?: string
 }
 
-const { className } = Astro.props;
+const { className } = Astro.props
 ---
 
 <div class={classNames(className, "card bg-neutral-900")}>
   <h1 class="font-extrabold text-6xl md:text-8xl text-neutral-200">Doruk Gezici</h1>
   <h2 class="my-5 sm:my-10 text-2xl md:text-4xl text-neutral-300">
     <TypeAnimation
-      sequence={[
-        "Backend & DevOps Engineer",
-        1000,
-        "Tech Entrepreneur",
-        1000,
-        "Full Stack Developer",
-        1000,
-        "Product Manager",
-        1000,
-      ]}
+      sequence={["Founder - POPJAM.IO", 1000, "Software Engineer", 1000, "Product Manager", 1000]}
       wrapper="span"
       speed={50}
       repeat={5}
@@ -42,8 +33,7 @@ const { className } = Astro.props;
   </h2>
 
   <p class="text-xl md:text-2xl">
-    <a href="/">DGtech,</a>
-    <a href="https://udext.com" target="_blank"> Udext,</a>
+    <a href="https://popjam.io" target="_blank"> POPJAM,</a>
     <a href="https://gamerarena.com" target="_blank"> Gamer Arena,</a>
     <a href="https://ituscheduler.com" target="_blank"> ITUscheduler</a>
   </p>
@@ -57,7 +47,7 @@ const { className } = Astro.props;
       <FontAwesomeIcon icon={faCalendar} className="mr-2" />
       Book Meeting
     </a>
-    <ContraBadge />
+    <!-- <ContraBadge /> -->
   </div>
 
   <div
@@ -65,7 +55,7 @@ const { className } = Astro.props;
       "social",
       "flex flex-wrap justify-center mt-5 sm:mt-10",
       "gap-4 sm:gap-8 md:gap-12 lg:gap-14",
-      "text-3xl sm:text-4xl text-neutral-300"
+      "text-3xl sm:text-4xl text-neutral-300",
     )}
   >
     <a href="https://linkedin.com/in/dorukgezici" target="_blank">
