--- a/src/components/FlipCard.astro
+++ b/src/components/FlipCard.astro
@@ -1,11 +1,11 @@
 ---
-import classNames from "classnames";
+import classNames from "classnames"
 
 interface Props {
-  className: string;
+  className: string
 }
 
-const { className } = Astro.props;
+const { className } = Astro.props
 ---
 
 <div class={classNames(className, "card")}>
